[package]
name = "nas-photos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls","sqlite","chrono", ] }
poem = { version = "1.3.47", features = ["static-files"] }
poem-openapi = { version = "2", features = ["swagger-ui", "chrono"] }
thiserror = "1"
async-trait = "0.1"
tracing = "0.1.34"
tracing-futures = { version = "0.2.3" }
tracing-subscriber = { version = "0.3.11"}
opentelemetry = "0.18.0"
tracing-opentelemetry = "0.18.0" 
opentelemetry-jaeger = "0.17.0"
serde = "1.0.137"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["macros", "tracing"] }
kamadak-exif = "0.5.5"
ffmpeg-next = "5.1.1"